python/src/randompack.h

typedef struct randompack_rng randompack_rng;
//================================== CREATION AND SETUP ==================================

randompack_rng *randompack_create( // Create randomized RNG with given engine, error → 0
  const char *engine    // in      Engine identifier, one of:
  );                    //           x256++simd   x256++   xoro++    philox   ranlux++
//								//				 x256**simd	  x256**	  pcg64     sfc64 	chacha20
//								//				 sfc64simd 	  x128+ 	  squares   cwg128
//                      //         randompack_create(0) gives he default, x256++simd.

bool randompack_seed( // Seed RNG deterministically, false on error
  int seed,             // in      Any integer seed; expanded with a hash to fill state
  uint32_t *spawn_key,  // in      Optional spawn key array (may be 0 if n_key==0)
  int n_key,            // in      Number of spawn_key entries
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_randomize( // Randomize RNG state from system entropy, false on error
  randompack_rng *rng   // in/out  Random number generator
);
void randompack_free( // Free an RNG created with randompack_create
  randompack_rng *rng   // in      Random number generator
);
randompack_rng *randompack_duplicate( // Clone an RNG (identical engine+state), error → 0
  randompack_rng *rng   // in      RNG to duplicate
);
//=================================== STREAM SELECTION ===================================

bool randompack_jump( // Jump pcg64 / ranlux / xor-family rng by 2^p steps, false on error
  int p,               // in      Jump exponent, ≤128 for pcg, otherwise 32/64/96/128/192
  randompack_rng *rng  // in/out  Random number generator
);
//==================================== CONFIGURATION =====================================

bool randompack_full_mantissa( // Use full mantissa (default false)
  randompack_rng *rng,  // in/out  Random number generator
  bool enable           // in      true → 24/53-bit mantissa, false → 23/52-bit
);
bool randompack_bitexact( // Use bitexact log/exp (default false)
  randompack_rng *rng,  // in/out  Random number generator
  bool enable           // in      true → bitexact, false → fast, vectorized
);
//=============================== CONTINUOUS DISTRIBUTIONS ===============================

bool randompack_u01( // Generate uniform random numbers in [0,1), false on error
  double x[],           // out     vector: uniform random numbers in [0,1)
  size_t len,           // in      Number of variates
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_unif( // Generate uniform random numbers in [a,b], false on error
  double x[],           // out     vector: uniform random numbers in [a,b]
  size_t len,           // in      Number of variates
  double a,             // in      Minimum (a < b)
  double b,             // in      Maximum (a < b)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_norm( // Generate standard normal random numbers N(0,1), false on error
  double x[],           // out     vector: standard normal random numbers
  size_t len,           // in      Number of variates
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_normal( // Generate normal random numbers N(mu,sigma), false on error
  double x[],           // out     vector: normal random numbers
  size_t len,           // in      Number of variates
  double mu,            // in      Mean
  double sigma,         // in      Standard deviation (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_exp( // Generate exponential random numbers, false on error
  double x[],           // out     vector: exponential random numbers
  size_t len,           // in      Number of variates
  double scale,         // in      Scale parameter (1.0 → standard exponential)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_lognormal( // Generate lognormal random numbers, false on error
  double x[],           // out     vector: lognormal random numbers
  size_t len,           // in      Number of variates
  double mu,            // in      Mean of underlying normal
  double sigma,         // in      Std dev of underlying normal (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_gamma( // Generate gamma random numbers, false on error
  double x[],           // out     vector: gamma random numbers
  size_t len,           // in      Number of variates
  double shape,         // in      Shape parameter (> 0)
  double scale,         // in      Scale parameter (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_beta( // Generate beta random numbers, false on error
  double x[],           // out     vector: beta random numbers
  size_t len,           // in      Number of variates
  double a,             // in      Shape parameter a (> 0)
  double b,             // in      Shape parameter b (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_chi2( // Generate chi-square random numbers, false on error
  double x[],           // out     vector: chi-square random numbers
  size_t len,           // in      Number of variates
  double nu,            // in      Degrees of freedom (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
//=========================== CONTINUOUS DISTRIBUTIONS (FLOAT) ===========================

bool randompack_u01f( // Generate uniform random floats in [0,1), false on error
  float x[],            // out     vector: uniform random numbers in [0,1)
  size_t len,           // in      Number of variates
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_uniff( // Generate uniform random floats U(a,b), false on error
  float x[],            // out     vector: uniform random numbers in [a,b)
  size_t len,           // in      Number of variates
  float a,              // in      Lower bound
  float b,              // in      Upper bound (> a)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_normf( // Generate normal random floats N(0,1), false on error
  float x[],            // out     vector: normal random numbers
  size_t len,           // in      Number of variates
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_normalf( // Generate normal random floats N(mu,sigma), false on error
  float x[],            // out     vector: normal random numbers
  size_t len,           // in      Number of variates
  float mu,             // in      Mean
  float sigma,          // in      Standard deviation (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_expf( // Generate exponential random floats, false on error
  float x[],            // out     vector: exponential random numbers
  size_t len,           // in      Number of variates
  float scale,          // in      Scale parameter (1.0f → standard exponential)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_lognormalf( // Generate lognormal random floats, false on error
  float x[],            // out     vector: lognormal random numbers
  size_t len,           // in      Number of variates
  float mu,             // in      Mean of underlying normal
  float sigma,          // in      Std dev of underlying normal (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_gammaf( // Generate gamma random floats, false on error
  float x[],            // out     vector: gamma random numbers
  size_t len,           // in      Number of variates
  float shape,          // in      Shape parameter (> 0)
  float scale,          // in      Scale parameter (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_betaf( // Generate beta random floats, false on error
  float x[],            // out     vector: beta random numbers
  size_t len,           // in      Number of variates
  float a,              // in      First shape parameter (> 0)
  float b,              // in      Second shape parameter (> 0)
  randompack_rng *rng   // in/out  Random number generator
);
bool randompack_chi2f( // Generate chi-square random floats, false on error
  float x[],            // out     vector: chi-square random numbers
  size_t len,           // in      Number of variates
  float nu,             // in      Degrees of freedom (> 0)
  randompack_rng *rng   // in/out  Random number generator
);