fortran/src/randompack.f90

module randompack
use, intrinsic :: iso_c_binding, only: c_ptr, c_char, c_bool, c_int, &
  c_size_t, c_double, c_float, c_int8_t, c_int32_t, c_int64_t, c_null_ptr, &
  c_null_char, c_associated, c_loc, c_f_pointer
implicit none
private
public :: randompack_rng, engines

integer, parameter :: MAXSTRLEN = 1000

type :: randompack_rng
  type(c_ptr) :: p = c_null_ptr
contains
  procedure :: create => rp_create
  procedure :: free => rp_free
  procedure :: duplicate => rp_duplicate
  procedure :: randomize => rp_randomize
  procedure :: jump => rp_jump
  procedure, private :: seed32 => rp_seed32
  procedure, private :: seed64 => rp_seed64
  generic :: seed => seed32, seed64
  procedure, private :: unif_vec
  procedure, private :: unif_mat
  procedure, private :: uniff_vec
  procedure, private :: uniff_mat
  generic :: unif => unif_vec, unif_mat, uniff_vec, uniff_mat
  procedure, private :: normal_vec
  procedure, private :: normal_mat
  procedure, private :: normalf_vec
  procedure, private :: normalf_mat
  generic :: normal => normal_vec, normal_mat, normalf_vec, normalf_mat
  procedure, private :: exp_vec
  procedure, private :: exp_mat
  procedure, private :: expf_vec
  procedure, private :: expf_mat
  generic :: exp => exp_vec, exp_mat, expf_vec, expf_mat
  procedure, private :: lognormal_vec
  procedure, private :: lognormal_mat
  procedure, private :: lognormalf_vec
  procedure, private :: lognormalf_mat
  generic :: lognormal => lognormal_vec, lognormal_mat, lognormalf_vec, lognormalf_mat
  procedure, private :: gamma_vec
  procedure, private :: gamma_mat
  procedure, private :: gammaf_vec
  procedure, private :: gammaf_mat
  generic :: gamma => gamma_vec, gamma_mat, gammaf_vec, gammaf_mat
  procedure, private :: beta_vec
  procedure, private :: beta_mat
  procedure, private :: betaf_vec
  procedure, private :: betaf_mat
  generic :: beta => beta_vec, beta_mat, betaf_vec, betaf_mat
  procedure, private :: chi2_vec
  procedure, private :: chi2_mat
  procedure, private :: chi2f_vec
  procedure, private :: chi2f_mat
  generic :: chi2 => chi2_vec, chi2_mat, chi2f_vec, chi2f_mat
  procedure, private :: t_vec
  procedure, private :: t_mat
  procedure, private :: tf_vec
  procedure, private :: tf_mat
  generic :: t => t_vec, t_mat, tf_vec, tf_mat
  procedure, private :: f_vec
  procedure, private :: f_mat
  procedure, private :: ff_vec
  procedure, private :: ff_mat
  generic :: f => f_vec, f_mat, ff_vec, ff_mat
  procedure, private :: gumbel_vec
  procedure, private :: gumbel_mat
  procedure, private :: gumbelf_vec
  procedure, private :: gumbelf_mat
  generic :: gumbel => gumbel_vec, gumbel_mat, gumbelf_vec, gumbelf_mat
  procedure, private :: pareto_vec
  procedure, private :: pareto_mat
  procedure, private :: paretof_vec
  procedure, private :: paretof_mat
  generic :: pareto => pareto_vec, pareto_mat, paretof_vec, paretof_mat
  procedure, private :: weibull_vec
  procedure, private :: weibull_mat
  procedure, private :: weibullf_vec
  procedure, private :: weibullf_mat
  generic :: weibull => weibull_vec, weibull_mat, weibullf_vec, weibullf_mat
  procedure, private :: skew_normal_vec
  procedure, private :: skew_normal_mat
  procedure, private :: skew_normalf_vec
  procedure, private :: skew_normalf_mat
  generic :: skew_normal => skew_normal_vec, skew_normal_mat, &
    skew_normalf_vec, skew_normalf_mat
  procedure :: mvn => mvn_mat
  procedure, private :: int32_vec
  procedure, private :: int32_mat
  procedure, private :: int64_vec
  procedure, private :: int64_mat
  procedure, private :: int64_vec32
  procedure, private :: int64_mat32
  generic :: int => int32_vec, int32_mat, int64_vec, int64_mat, &
    int64_vec32, int64_mat32
  procedure, private :: perm32_vec
  procedure, private :: perm64_vec
  generic :: perm => perm32_vec, perm64_vec
  procedure, private :: sample32_vec
  procedure, private :: sample32_vec64
  procedure, private :: sample64_vec
  procedure, private :: sample64_vec32
  generic :: sample => sample32_vec, sample32_vec64, sample64_vec, sample64_vec32
  procedure, private :: raw32_vec
  procedure, private :: raw32_mat
  procedure, private :: raw64_vec
  procedure, private :: raw64_mat
  generic :: raw => raw32_vec, raw32_mat, raw64_vec, raw64_mat
  procedure :: serialize => rp_serialize
  procedure :: deserialize => rp_deserialize
  procedure, private :: set_state32
  procedure, private :: set_state64
  generic :: set_state => set_state32, set_state64
  procedure, private :: advance32 => rp_advance32
  procedure, private :: advance64 => rp_advance64
  procedure, private :: advance128 => rp_advance128
  generic :: advance => advance32, advance64, advance128
  procedure :: philox_set_key => rp_philox_set_key
  procedure :: pcg64_set_inc => rp_pcg64_set_inc
  procedure :: sfc64_set_abc => rp_sfc64_set_abc
  procedure :: chacha_set_nonce => rp_chacha_set_nonce
  procedure, private :: squares_set_key32 => rp_squares_set_key32
  procedure, private :: squares_set_key64 => rp_squares_set_key64
  generic :: squares_set_key => squares_set_key32, squares_set_key64
  procedure :: last_error => rp_last_error
  final :: rp_finalize
end type randompack_rng

! C bindings to the underlying library.
interface
  function crp_create(engine) bind(C, name="randompack_create") result(p)
    import :: c_ptr
    type(c_ptr), value :: engine
    type(c_ptr) :: p
  end function

  function crp_duplicate(rngp) bind(C, name="randompack_duplicate") result(p)
    import :: c_ptr
    type(c_ptr), value :: rngp
    type(c_ptr) :: p
  end function

  logical(c_bool) function crp_randomize(rngp) bind(C, name="randompack_randomize")
    import :: c_ptr, c_bool
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_full_mantissa(rngp, enable) &
    bind(C, name="randompack_full_mantissa")
    import :: c_ptr, c_bool
    type(c_ptr), value :: rngp
    logical(c_bool), value :: enable
  end function

  logical(c_bool) function crp_bitexact(rngp, enable) bind(C, name="randompack_bitexact")
    import :: c_ptr, c_bool
    type(c_ptr), value :: rngp
    logical(c_bool), value :: enable
  end function

  logical(c_bool) function crp_jump(p, rngp) bind(C, name="randompack_jump")
    import :: c_int, c_ptr, c_bool
    integer(c_int), value :: p
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_seed(seed, spawn_key, n_key, rngp) &
    bind(C, name="randompack_seed")
    import :: c_int32_t, c_ptr, c_bool, c_int
    integer(c_int32_t), value :: seed
    type(c_ptr), value :: spawn_key
    integer(c_int), value :: n_key
    type(c_ptr), value :: rngp
  end function

  subroutine crp_free(rngp) bind(C, name="randompack_free")
    import :: c_ptr
    type(c_ptr), value :: rngp
  end subroutine

  logical(c_bool) function crp_u01(x, n, rngp) bind(C, name="randompack_u01")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_u01f(x, n, rngp) bind(C, name="randompack_u01f")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_unif(x, n, a, b, rngp) bind(C, name="randompack_unif")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: a
    real(c_double), value :: b
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_uniff(x, n, a, b, rngp) bind(C, name="randompack_uniff")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: a
    real(c_float), value :: b
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_norm(x, n, rngp) bind(C, name="randompack_norm")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_normf(x, n, rngp) bind(C, name="randompack_normf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_normal(x, n, mu, sigma, rngp) &
    bind(C, name="randompack_normal")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: mu
    real(c_double), value :: sigma
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_normalf(x, n, mu, sigma, rngp) &
    bind(C, name="randompack_normalf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: mu
    real(c_float), value :: sigma
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_exp(x, n, scale, rngp) bind(C, name="randompack_exp")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_expf(x, n, scale, rngp) bind(C, name="randompack_expf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_lognormal(x, n, mu, sigma, rngp) &
    bind(C, name="randompack_lognormal")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: mu
    real(c_double), value :: sigma
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_lognormalf(x, n, mu, sigma, rngp) &
    bind(C, name="randompack_lognormalf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: mu
    real(c_float), value :: sigma
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_gamma(x, n, shape, scale, rngp) &
    bind(C, name="randompack_gamma")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: shape
    real(c_double), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_gammaf(x, n, shape, scale, rngp) &
    bind(C, name="randompack_gammaf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: shape
    real(c_float), value :: scale
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_beta(x, n, a, b, rngp) bind(C, name="randompack_beta")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: a
    real(c_double), value :: b
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_betaf(x, n, a, b, rngp) bind(C, name="randompack_betaf")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: a
    real(c_float), value :: b
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_chi2(x, n, nu, rngp) bind(C, name="randompack_chi2")
    import :: c_double, c_size_t, c_ptr, c_bool
    real(c_double) :: x(*)
    integer(c_size_t), value :: n
    real(c_double), value :: nu
    type(c_ptr), value :: rngp
  end function

  logical(c_bool) function crp_chi2f(x, n, nu, rngp) bind(C, name="randompack_chi2f")
    import :: c_float, c_size_t, c_ptr, c_bool
    real(c_float) :: x(*)
    integer(c_size_t), value :: n
    real(c_float), value :: nu
    type(c_ptr), value :: rngp
  end function
